Fixed responsiveness by removing x axis scroll showing on mobile devices

--- a/style.css
+++ b/style.css
@@ -5,9 +5,7 @@
     font-family: Poppins, Roboto, Arial, Helvetica, sans-serif;
 }
 
-html {
-    height: 100%;
-}
+
 
 
 /* Media Queries */
@@ -25,7 +23,6 @@ body {
     margin-left: 5%;
     margin-right: 5%;
     color: #212121;
-
     
 }
 
@@ -44,6 +41,7 @@ body {
 }
 
 @media screen and (max-width: 680px) {
+   
     .top {
         position: absolute;
         display: flex;
@@ -161,6 +159,7 @@ body {
     font-weight: 600;
     height: 75%;
     overflow-y: auto;
+    overflow-x: hidden;
     opacity: 1;
 }
 
